--- a/archive.html
+++ b/archive.html
@@ -1,3 +1,8 @@
+---
+layout: default
+title: "archive"
+permalink: archive.html
+---
 <section id="archive">
   <h3>This year's posts</h3>
   {%for post in site.posts %}
