--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 excerpt: "A minimal Jekyll theme for your blog by designer Michael Rose."
 tags: [Jekyll, theme, responsive, blog, template]
 image:
-  feature: pic.jpg
+  feature: bg.jpg
 ---
 <!-- This loops through the paginated posts -->
 {% for post in paginator.posts %}
