--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ excerpt: "A minimal Jekyll theme for your blog by designer Michael Rose."
 tags: [Jekyll, theme, responsive, blog, template]
 image:
   feature: bg.jpg
+  credit : Chris Neale
+  creditlink : http://www.chrisneale.org/
 ---
 <!-- This loops through the paginated posts -->
 {% for post in paginator.posts %}
